# ChangeLog for net-nds/rpcbind
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-nds/cvs-repo/gentoo-x86/net-nds/rpcbind/ChangeLog,v 1.5 2009/05/30 20:53:26 vapier Exp $

*rpcbind-0.2.0 (30 May 2009)

  30 May 2009; Mike Frysinger <vapier@gentoo.org> +rpcbind-0.2.0.ebuild:
  Version bump.

*rpcbind-9999 (17 Jan 2009)

  17 Jan 2009; Mike Frysinger <vapier@gentoo.org> +rpcbind-9999.ebuild:
  Add live git ebuild #255201 by Chi-Thanh Christopher Nguyen.

*rpcbind-0.1.7 (17 Jan 2009)

  17 Jan 2009; Mike Frysinger <vapier@gentoo.org> +rpcbind-0.1.7.ebuild:
  Version bump #255199 by Chi-Thanh Christopher Nguyen.

*rpcbind-0.1.5.1 (06 Dec 2008)

  06 Dec 2008; <ssuominen@gentoo.org> +rpcbind-0.1.5.1.ebuild:
  Version bump for bug 249811, thanks to Chi-Thanh Christopher Nguyen.

*rpcbind-0.1.4 (29 Dec 2007)

  29 Dec 2007; Mike Frysinger <vapier@gentoo.org> +files/rpcbind.confd,
  +files/rpcbind.initd, +metadata.xml, +rpcbind-0.1.4.ebuild:
  Initial ebuild by me.
