@@ -3,19 +3,17 @@ Hash: SHA1
 
 AUX rpcbind.confd 68 RMD160 0b48cacf0ae78db4c1f305a93e019a1f3060d601 SHA1 8ccb1af754b68fca07ecc75a3dae6446a468d94e SHA256 38bb95aefc38d843d0890d9c15affd28f19f2133c17f463396c62970e7e2dffc
 AUX rpcbind.initd 523 RMD160 6742d6e354055d16dfa5ea44e69c94f598c29b54 SHA1 05d325c01431a978b59a17aaf47b59b28909f609 SHA256 6561ae40c5899a9f7a12f1f0867bec47d47c7cc3c583574ffcecbbf6f8d8afbb
-DIST rpcbind-0.1.5-1.tar.bz2 265920 RMD160 eda4107db55697d79e3d37b44e72ae91eeee87a5 SHA1 243b9ec38d35216c606dc1400afbec5a0758d973 SHA256 cdfb3dfda8e8e2fee33a172a88fa9a0ec9194286ddf054f1484cbcffdb59d366
 DIST rpcbind-0.1.7.tar.bz2 268818 RMD160 416aac848eef6be14ea8fe7594e5e6895d6bffc4 SHA1 bd776206c9bd8e66eb7aef5cb9496677a05b44c3 SHA256 de218e2139170c81c00815fb2c3c9572777a15bcc802e64951313a08bc8bf6cb
 DIST rpcbind-0.2.0.tar.bz2 271018 RMD160 596ab1cbc37b17c09dafaa4cd9e86e21f8d62f12 SHA1 02f077372a76a8f9adfa696004aa437212c28617 SHA256 c92f263e0353887f16379d7708ef1fb4c7eedcf20448bc1e4838f59497a00de3
-EBUILD rpcbind-0.1.5.1.ebuild 1111 RMD160 ad36af1e171bc4d43adf87f6cca80aaed04c513f SHA1 dc9d0bd46acdafe83efe443dc53a85b66c975775 SHA256 e7756665a085868aafcef14810be457fa0336d54b61b001622f93f255a0fd936
 EBUILD rpcbind-0.1.7.ebuild 1120 RMD160 7c35ed8fc5b14016680db1e6b3220d0f18eb92cd SHA1 77d9bc52c0e91da68f5bdbaf41d4e1321561704d SHA256 b604b5d8780da7e866fd701602f01085104fdfd92da9fabf6733e950e98ee531
-EBUILD rpcbind-0.2.0.ebuild 1120 RMD160 914919b5ed423db0508c4fb5b5b379cf19c0fa7c SHA1 c0b3510a908eb509047d6683314af84bc77c612c SHA256 6eb18aad1b17f0b9ad519c6e25da16e60a97ce23fe41ac580616a9584ffab1d5
-EBUILD rpcbind-9999.ebuild 1119 RMD160 1363e23b353119286fba2a567de02f0584eef9da SHA1 54ae70b3158daf864d8207335beb93f12225af14 SHA256 8263c6e3887fc5455ed73fad0f4e44e04995a10239d6bb8dacff0ee93de8d4c5
-MISC ChangeLog 1004 RMD160 1728633fd6d30c043b2da784c41a6cf347ae11b7 SHA1 ac934ef87cdea5e8a8941937a6af13bdd72ebdbf SHA256 f12dcebdf532f9bf997b39eb4d414cd39bb74420172e35fb89b51ccb3bccb277
+EBUILD rpcbind-0.2.0.ebuild 1197 RMD160 fe54d51afbe1599fb90aac763f4c8ffb963cf4a9 SHA1 349995b2a78c0e9c72cefb7b0697119679476d14 SHA256 004d28c6ac73c9191e8abe62f11c1acd1f01a16a7d038af858e8f32cc9854563
+EBUILD rpcbind-9999.ebuild 1196 RMD160 d411e1b5d0b5d5d334b43c0e1ecc8085416f5cc0 SHA1 6f9ff117ec5e7d9ed76f922cf78384808f84130a SHA256 dc242ccd1b5c5bdd4d4962b3d0126d929c4becf4ea7d38f5d2a9f730ca156f0a
+MISC ChangeLog 1124 RMD160 c42983343544583ca0eea8992ca332249570254f SHA1 3b61d371f2bfae8829a50be84d5e69133df8e9c1 SHA256 436309a893117f041f51ed5dbee092658a162ccbac6bb998b7ce58878d678a23
 MISC metadata.xml 159 RMD160 8e0977b9abd90afe9e1d5c1326823a5726f6e2a4 SHA1 33f35324ce730e28838be228d9ee4e4dd1bab1e5 SHA256 562c59615c028ffa088de789b3a792fd4cbbbfe71628ddd6a55d3b176becbc6b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkohnG8ACgkQn/5bYzqsSmHWEwCdGTv1WU0mN+COuvZBs7KOyh+w
-yZgAni5c3XHBf44zWddX2H2Ie8NYgyEg
-=VjI5
+iEYEARECAAYFAkohqNgACgkQn/5bYzqsSmGHfACeMlpxEX+OmEaa1rh9Iz9e59R2
++B0Anjlc0HdsK2/covwR9OeLkO+t+98q
+=MNKz
 -----END PGP SIGNATURE-----
