@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-nds/cvs-repo/gentoo-x86/net-nds/rpcbind/rpcbind-9999.ebuild,v 1.1 2009/01/17 17:37:19 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-nds/cvs-repo/gentoo-x86/net-nds/rpcbind/rpcbind-9999.ebuild,v 1.2 2009/05/30 21:46:22 vapier Exp $
 
 if [[ ${PV} == "9999" ]] ; then
 	EGIT_REPO_URI="git://git.infradead.org/~steved/rpcbind.git"
@@ -9,7 +9,7 @@ if [[ ${PV} == "9999" ]] ; then
 	KEYWORDS=""
 else
 	SRC_URI="mirror://sourceforge/${PN}/${P}.tar.bz2"
-	KEYWORDS="~amd64 ~x86"
+	KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86"
 fi
 
 DESCRIPTION="portmap replacement which supports RPC over various protocols"
@@ -20,6 +20,7 @@ SLOT="0"
 IUSE=""
 
 DEPEND="net-libs/libtirpc"
+RDEPEND=${DEPEND}
 
 src_unpack() {
 	if [[ ${PV} == "9999" ]] ; then
