@@ -1,6 +1,10 @@
 # ChangeLog for net-nds/rpcbind
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-nds/cvs-repo/gentoo-x86/net-nds/rpcbind/ChangeLog,v 1.5 2009/05/30 20:53:26 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-nds/cvs-repo/gentoo-x86/net-nds/rpcbind/ChangeLog,v 1.6 2009/05/30 21:46:22 vapier Exp $
+
+  30 May 2009; Mike Frysinger <vapier@gentoo.org> rpcbind-0.2.0.ebuild,
+  rpcbind-9999.ebuild:
+  Add keywords for all.
 
 *rpcbind-0.2.0 (30 May 2009)
 
